fix clipping video frame

--- a/styles/main.css
+++ b/styles/main.css
@@ -86,11 +86,21 @@ img {
   margin: 0;
 }
 
-  .video-container {
-    width: 75%;
-    /* max-width: 560px; */
-    margin: 0 auto; /* Center the video horizontally */
-  }
+.video-container {
+  position: relative;
+  width: 75%;
+  max-width: 560px; /* Optional: Limit the maximum width of the video */
+  margin: 0 auto; /* Center the video horizontally */
+  padding-bottom: 56.25%; /* 16:9 aspect ratio (9 divided by 16 multiplied by 100) */
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .external-links a {
   margin-top: 30px;
